@@ -29,7 +29,7 @@
 \includegraphics{figs/logo}\\[4cm]
 
 {\Huge \emph{Pyscript}}\\[1cm]
-\emph{Postscript drawing in Python}\\[2cm]
+\emph{Postscript Graphics with Python}\\[2cm]
 
 v 0.3\\[2cm]
 
